# simplification

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  CMakeUserPresets_template.json  README.md  vcpkg.json
frontend/: CMakeLists.txt  debug.cpp  debug.h  graph.inc  graph_painter.h  gui.cpp  gui.h  ipe_reader.h  ksbb.cpp  ksbb.h  ksbb_inexact.cpp  ksbb_inexact.h  main.cpp  persistent_settings.cpp  persistent_settings.h  read_graph_gdal.cpp  read_graph_gdal.h  region_set.cpp  region_set.h  restrictor.cpp  restrictor.h  simplification_algorithm.cpp  simplification_algorithm.h  smoother.cpp  smoother.h  vw.cpp  vw.h  vw_inexact.cpp  vw_inexact.h
src/demo/: CMakeLists.txt  simplification.cpp
